# cecies

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  build-mingw.sh  build.bat  build.sh  codecov.yml  doxyfile  library.h  test.bat  test.sh
.circleci/: config.yml
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cecies.sln  cecies.vcxproj  cecies.vcxproj.filters  run_tests.vcxproj  run_tests.vcxproj.filters
build-msvc/cmocka/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmocka-config-version.cmake  cmocka.pc  cmocka.sln  config.h  dist.vcxproj  dist.vcxproj.filters
build-msvc/cmocka/doc/: Doxyfile.docs  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  docs.vcxproj  docs.vcxproj.filters
build-msvc/cmocka/example/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  allocate_module_test.vcxproj  allocate_module_test.vcxproj.filters  assert_macro_test.vcxproj  assert_macro_test.vcxproj.filters  assert_module_test.vcxproj  assert_module_test.vcxproj.filters  cmocka-examples.sln  simple_test.vcxproj  simple_test.vcxproj.filters
build-msvc/cmocka/include/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmocka-header.sln
build-msvc/cmocka/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmocka-library.sln  cmocka.vcxproj  cmocka.vcxproj.filters
build-msvc/mbedtls/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  apidoc.vcxproj  apidoc.vcxproj.filters  mbed TLS.sln
build-msvc/mbedtls/include/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
cmake/: FixWindowsC5105.cmake
csharp/: .gitignore  CeciesSharp.cs  CeciesSharp.csproj  README.md
csharp/CeciesSharp/: .gitignore  CeciesSharp.sln  CeciesSharp.sln.DotSettings
csharp/CeciesSharp.Example/: .gitignore  GlitchedPolygons.CeciesSharp.Example.csproj  Program.cs
csharp/CeciesSharp/src/: CeciesSharp.cs  CeciesSharp.csproj  CeciesSharp.nuspec  README.md
csharp/CeciesSharp/src/lib/x64/linux/: libcecies.so.2.1.3  libcecies.so.2.1.4
csharp/CeciesSharp/src/lib/x64/mac/: libcecies.2.1.3.dylib  libcecies.2.1.4.dylib
csharp/lib/: NOTICE
csharp/lib/x64/linux/: libcecies.so.3.0.0  libcecies.so.3.1.0  libcecies.so.4.0.0  libcecies.so.4.0.1  libcecies.so.4.0.3
csharp/lib/x64/mac/: libcecies.3.0.0.dylib  libcecies.3.1.0.dylib  libcecies.4.0.0.dylib  libcecies.4.0.1.dylib  libcecies.4.0.3.dylib
csharp/src/lib/x64/mac/: libcecies.2.1.5.dylib
docs/: annotated.html  classes.html  constants_8h.html  constants_8h__dep__incl.md5  constants_8h_source.html  decrypt_8h.html  decrypt_8h__incl.dot  decrypt_8h__incl.md5  decrypt_8h_source.html  dir_71b7081da274702b78edf7feaaa8fcde.html  dir_d44c64559bbebec7f509842c48db8b23.html  encrypt_8h.html  encrypt_8h__incl.dot  encrypt_8h__incl.md5  encrypt_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  guid_8h.html  guid_8h__incl.md5  guid_8h_source.html  index.html  keygen_8h.html  keygen_8h__incl.dot  keygen_8h__incl.md5  keygen_8h_source.html  menudata.js  structcecies__curve25519__key-members.html  structcecies__curve25519__key.html  structcecies__curve25519__keypair-members.html  structcecies__curve25519__keypair.html  structcecies__curve25519__keypair__coll__graph.md5  structcecies__curve448__key-members.html  structcecies__curve448__key.html  (+13 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
examples/: CMakeLists.txt  example01.c  example02.c  example03.c  example04.c  example05.c
include/cecies/: constants.h  data.txt  decrypt.h  encrypt.h  guid.h  keygen.h  sign.h  types.h  util.h  verify.h
programs/: .gitignore  CMakeLists.txt  cecies_curve25519_decrypt.c  cecies_curve25519_encrypt.c  cecies_curve448_decrypt.c  cecies_curve448_encrypt.c  cecies_decrypt.c  cecies_encrypt.c  curve25519_keygen.c  curve448_keygen.c  ecdsa_sha256_secp256k1_sign.c  ecdsa_sha256_secp256k1_verify.c  ed25519_keygen.c  ed25519_sign.c  ed25519_verify.c  secp256k1_keygen.c
src/: decrypt.c  encrypt.c  guid.c  keygen.c  sign.c  util.c  verify.c
tests/: tests.c
